Fixing bug on profile to view tasks
Fixing profile bug to view tasks.
Working on Teams page.
On click outside of main modal it closes
Search columns fixed for smaller devices